# signtown_to_anki

./: README.md  pyproject.toml
src/signtown_to_anki/: main.py
src/signtown_to_anki/templates/: ja-jsl_image_back.template.anki  jsl-ja_image_back.template.anki  jsl-ja_image_front.template.anki  style.css
